[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
hashbrown = "0.14.5"
itertools = "0.13.0"
ndarray = "0.15.6"
pathfinding = "4.9.1"
petgraph = "0.6.5"
rayon = "1.10.0"
simple-grid = "2.2.1"
winnow = "0.6.8"
